<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_emisor"
        android:title="@string/emisor"
        android:icon="@drawable/ic_launcher_background" />
    <item
        android:id="@+id/nav_reportes"
        android:title="@string/reportes"
        android:icon="@drawable/ic_launcher_background" />
    <item
        android:id="@+id/nav_clientes"
        android:title="@string/clientes"
        android:icon="@drawable/ic_launcher_background" />
    <item
        android:id="@+id/nav_not_credito"
        android:title="@string/nota_de_credito"
        android:icon="@drawable/ic_launcher_background" />
    <item
        android:id="@+id/nav_facturacion"
        android:title="@string/facturaci_n"
        android:icon="@drawable/ic_launcher_background" />
    <item
        android:id="@+id/nav_informacion"
        android:title="@string/informacion"
        android:icon="@drawable/ic_launcher_background" />
    <item
        android:id="@+id/nav_iniciar_sesion"
        android:title="@string/iniciar_sesi_n"
        android:icon="@drawable/ic_launcher_background" />
</menu>
