<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="@dimen/activity_padding"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/activity_toplog"
            android:layout_height="wrap_content"
            android:textColorHint="@color/orange">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etxtCedulaCli"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:hint="@string/cedula"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/orange" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/activity_toplog"
            android:layout_height="wrap_content"
            android:textColorHint="@color/orange">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etxtNombreCli"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:hint="@string/nombre"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/orange" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/activity_toplog"
            android:layout_height="wrap_content"
            android:textColorHint="@color/orange">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etxtDireccionCli"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:hint="@string/direccion"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/orange" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/activity_toplog"
            android:layout_height="wrap_content"
            android:textColorHint="@color/orange">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etxtCorreoCli"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:hint="@string/correo"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/orange" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/activity_toplog"
            android:layout_height="wrap_content"
            android:textColorHint="@color/orange">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etxtTelefonoCli"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:hint="@string/telefono"
                android:inputType="phone"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/orange" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin_top_activityregu"
        android:weightSum="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:textColor="@color/white"
            android:text="@string/guardar_actualizar" />

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:textColor="@color/white"
            android:text="@string/cancelar" />
    </LinearLayout>
</LinearLayout>